--- a/settings/VSCode-Settings.json
+++ b/settings/VSCode-Settings.json
@@ -1,40 +1,49 @@
 {
+    // Python
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
-    "files.autoSave": "afterDelay",
-    "terminal.integrated.rendererType": "canvas",
-    "python.jediEnabled": false,
-    "workbench.colorTheme": "Predawn",
-    "workbench.iconTheme": "ayu",
-    "editor.fontSize": 13,
-    "editor.fontWeight": "normal",
-    "editor.fontFamily": "JetBrains Mono",
-    "debug.console.fontFamily": "JetBrains Mono",
-    "debug.console.fontSize": 11,
-    "terminal.integrated.fontSize": 13,
-    "terminal.integrated.fontWeight": "normal",
-    "terminal.integrated.letterSpacing": -1,
-    "terminal.integrated.lineHeight": 1,
-    "window.zoomLevel": 1.5,
-    "workbench.settings.editor": "json",
-    "workbench.settings.openDefaultSettings": true,
-    "workbench.settings.useSplitJSON": true,
-    // for *unix:
-    // "python.pythonPath": "/bin/python3",
-    // for windows:
-    // "python.pythonPath": "C:\\Users\\<User name>\\AppData\\Local\\Programs\\Python\\<Python38-32>\\python.exe",
     "python.formatting.provider": "black",
-    "editor.formatOnSave": true,
-    "code-runner.executorMap": {
-        "python": "$pythonPath -u $fullFileName"
-    },
-    "code-runner.clearPreviousOutput": true,
-    "code-runner.showExecutionMessage": false,
+    "python.jediEnabled": false,
+    // Clojure
     "calva.prettyPrintingOptions": {
         "enabled": true,
         "printEngine": "pprint",
         "width": 120
     },
     "calva.paredit.defaultKeyMap": "strict",
-    "workbench.startupEditor": "newUntitledFile"
+    // Editor
+    "editor.fontSize": 13,
+    "editor.letterSpacing": 0,
+    "editor.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
+    "editor.fontLigatures": true,
+    "editor.suggestSelection": "first",
+    "editor.formatOnSave": true,
+    // Debug consol
+    "debug.console.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
+    "debug.console.fontSize": 15,
+    // Terminal
+    "terminal.integrated.rendererType": "auto",
+    "terminal.integrated.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
+    "terminal.integrated.fontSize": 13,
+    "terminal.integrated.fontWeight": "normal",
+    "terminal.integrated.letterSpacing": 0,
+    "terminal.integrated.lineHeight": 1,
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
+    // Workbench
+    "workbench.iconTheme": "vscode-icons",
+    "workbench.colorTheme": "Darcula",
+    "workbench.settings.editor": "json",
+    "workbench.settings.openDefaultSettings": true,
+    "workbench.settings.useSplitJSON": true,
+    "workbench.activityBar.visible": true,
+    "workbench.startupEditor": "newUntitledFile",
+    // Scope colors
+    "bracket-pair-colorizer-2.colors": [
+        "Gold",
+        "Orchid",
+        "LightSkyBlue"
+    ],
+    // Other
+    "files.autoSave": "afterDelay",
+    "window.zoomLevel": 1.0
 }
