--- a/settings/VSCode-Settings.json
+++ b/settings/VSCode-Settings.json
@@ -3,6 +3,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": false,
     "python.formatting.provider": "black",
+    "python.pythonPath": "C:\\Users\\Elena\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
     "python.jediEnabled": false,
     // Clojure
     "calva.prettyPrintingOptions": {
@@ -12,26 +13,25 @@
     },
     "calva.paredit.defaultKeyMap": "strict",
     // Editor
-    "editor.fontSize": 13,
+    "editor.fontSize": 15,
     "editor.letterSpacing": 0,
-    "editor.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
+    "editor.fontFamily": "Consolas",
     "editor.fontLigatures": true,
     "editor.suggestSelection": "first",
     "editor.formatOnSave": true,
     // Debug consol
-    "debug.console.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
-    "debug.console.fontSize": 15,
+    "debug.console.fontFamily": "Consolas",
+    "debug.console.fontSize": 14,
     // Terminal
     "terminal.integrated.rendererType": "auto",
-    "terminal.integrated.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
-    "terminal.integrated.fontSize": 13,
+    "terminal.integrated.fontFamily": "Consolas",
+    "terminal.integrated.fontSize": 14,
     "terminal.integrated.fontWeight": "normal",
     "terminal.integrated.letterSpacing": 0,
     "terminal.integrated.lineHeight": 1,
     "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe",
     // Workbench
     "workbench.iconTheme": "vscode-icons",
-    "workbench.colorTheme": "Darcula",
     "workbench.settings.editor": "json",
     "workbench.settings.openDefaultSettings": true,
     "workbench.settings.useSplitJSON": true,
@@ -39,11 +39,15 @@
     "workbench.startupEditor": "newUntitledFile",
     // Scope colors
     "bracket-pair-colorizer-2.colors": [
-        "Gold",
         "Orchid",
+        "Olive",
         "LightSkyBlue"
     ],
+    "bracket-pair-colorizer-2.forceUniqueOpeningColor": false,
     // Other
     "files.autoSave": "afterDelay",
-    "window.zoomLevel": 1.0
+    "window.zoomLevel": 1.0,
+    "workbench.colorTheme": "Solarized Custom Light",
+    "python.languageServer": "Pylance",
+    "python.showStartPage": false,
 }
